--- a/word-embeedings/ParseToEmbeedings.ipynb
+++ b/word-embeedings/ParseToEmbeedings.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:1698061006a6b3b67ec28a53e326c691e7a3a03a67cb6f6f39a4cc4f06dea43c"
+  "signature": "sha256:ce8c486379cd433b1b88e10848d0c0afe54a7e6043b69411961d9896043c3904"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -221,15 +221,16 @@
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 23,
-       "text": [
-        "load_con_data (generic function with 1 method)"
+       "ename": "LoadError",
+       "evalue": "LoadError: UndefVarError: @> not defined\nwhile loading In[1], in expression starting on line 4",
+       "output_type": "pyerr",
+       "traceback": [
+        "LoadError: UndefVarError: @> not defined\nwhile loading In[1], in expression starting on line 4",
+        ""
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
