=removed merge cluster

--- a/word-embeedings/HClustering.ipynb
+++ b/word-embeedings/HClustering.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:9fef0d915755bc951c189f849e29b6fd1c8e11e33ac64c84af0a833de7743c51"
+  "signature": "sha256:95738f4e04cc06c223515877dad6dca09f125cd50a72c55da1bfd6f83adf1509"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,34 +13,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "Pkg.add(\"DataStructures\")\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "using DataFrames\n",
       "using HDF5, JLD\n",
-      "using Lazy\n"
+      "using Lazy\n",
+      "using DataStructures\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\n",
-        "WARNING: deprecated syntax \"{}\" at /home/wheel/oxinabox/.julia/v0.4/Memoize/src/Memoize.jl:24.\n",
-        "Use \"[]\" instead.\n"
-       ]
-      }
-     ],
-     "prompt_number": 89
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -112,7 +93,8 @@
      "collapsed": false,
      "input": [
       "@load \"cons.jld\"\n",
-      "@load \"terms_people.jld\""
+      "@load \"terms_people.jld\"\n",
+      "#load \"term_doc_desc.jld\""
      ],
      "language": "python",
      "metadata": {},
@@ -135,111 +117,6 @@
       }
      ],
      "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "@fastmath function merge_cluster(term_doc::AbstractArray{Float64}, minSimilarityPortionToMerge=0, maxMerges=HUGE)\n",
-      "    occur_doc = (term_doc.>0) \n",
-      "    clusters = Dict{Int64,AbstractArray{Int64,1}}([doc=>[doc] for doc in 1:size(term_doc,2)])\n",
-      "    for ii in 1:maxMerges\n",
-      "        common_terms = occur_doc'*occur_doc\n",
-      "        self_common = diag(common_terms)\n",
-      "        \n",
-      "        common_terms[bool(eye(size(common_terms,1)))]=0.0 #clear self matchs\n",
-      "\n",
-      "        similarity, indexMax = findmax(common_terms./self_common)\n",
-      "        mergeA, mergeB = ind2sub(size(common_terms), indexMax) \n",
-      "\n",
-      "        if similarity>=minSimilarityPortionToMerge \n",
-      "            println(\"$ii, $similarity, Merging $mergeB into $mergeA\")\n",
-      "            \n",
-      "            @inbounds occur_doc[:,mergeA] = (occur_doc[:,mergeA] | occur_doc[:,mergeB])\n",
-      "            @inbounds occur_doc[:,mergeB] = 0\n",
-      "            \n",
-      "            append!(clusters[mergeA], clusters[mergeB])\n",
-      "            delete!(clusters, mergeB)\n",
-      "        else\n",
-      "            break\n",
-      "        end\n",
-      "    end\n",
-      "    occur_doc, clusters\n",
-      "end"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "occur_doc,clusters = merge_cluster(term_doc_people,0.6);\n",
-      "sclusters = sort(collect(clusters), by=x->-length(x[2]))\n",
-      "print(\"\\n\\n\\n\")\n",
-      "for (cluster_id, doc_ids) in sclusters\n",
-      "    person_ids = find(occur_doc[:,cluster_id])\n",
-      "    names = map(id -> terms_people.deindex[id], person_ids)\n",
-      "    \n",
-      "    sessions = [\"$title ($year)\" for (title,year) in zip((con[doc_ids,:title], con[doc_ids,:year])...)]\n",
-      "    \n",
-      "    println(\"###\",join(names, \", \"))\n",
-      "    println(\" - \", join(sessions, \"\\n - \"))\n",
-      "    println()\n",
-      "end\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "@load \"term_doc_desc.jld\""
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 8,
-       "text": [
-        "1-element Array{Symbol,1}:\n",
-        " :term_doc_desc"
-       ]
-      }
-     ],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "occur_doc,clusters = merge_cluster(term_doc_desc,0.5);"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "for doc_ids in values(clusters)\n",
-      "    if length(doc_ids)>1\n",
-      "        sessions = [\"$title ($year)\" for (title,year) in zip((con[doc_ids,:title], con[doc_ids,:year])...)]\n",
-      "            println(\"------------------------------\")\n",
-      "            println(\" - \", join(sessions, \"\\n - \"))\n",
-      "            println()\n",
-      "    end \n",
-      "end"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "code",
